--- a/notebooks/2019-10-04-flower-data-analysis-nextflow.ipynb
+++ b/notebooks/2019-10-04-flower-data-analysis-nextflow.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -472,13 +472,417 @@
        "16   50.226226  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "rdffiles.sort_values(['maxrdf_loc', 'celltypes', 'color-pair'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>rdffile</th>\n",
+       "      <th>movfile</th>\n",
+       "      <th>color-pair</th>\n",
+       "      <th>celltypes</th>\n",
+       "      <th>time</th>\n",
+       "      <th>array_size</th>\n",
+       "      <th>maxrdf_loc</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>/projects/chuang-lab/jnh/flower/nextflow/rdffi...</td>\n",
+       "      <td>41586_2019_1429_MOESM2_ESM.mov.clip-0-0.mov</td>\n",
+       "      <td>gg</td>\n",
+       "      <td>hFwe1(GFP)</td>\n",
+       "      <td>0-24.024hr</td>\n",
+       "      <td>(1024, 1024, 29)</td>\n",
+       "      <td>45.101101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>/projects/chuang-lab/jnh/flower/nextflow/rdffi...</td>\n",
+       "      <td>41586_2019_1429_MOESM2_ESM.mov.clip-0-1.mov</td>\n",
+       "      <td>gg</td>\n",
+       "      <td>hFwe2(GFP)</td>\n",
+       "      <td>0-24.024hr</td>\n",
+       "      <td>(1024, 1024, 29)</td>\n",
+       "      <td>48.176176</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>/projects/chuang-lab/jnh/flower/nextflow/rdffi...</td>\n",
+       "      <td>41586_2019_1429_MOESM2_ESM.mov.clip-0-2.mov</td>\n",
+       "      <td>rr</td>\n",
+       "      <td>hFwe1(RFP)</td>\n",
+       "      <td>0-24.024hr</td>\n",
+       "      <td>(1024, 1024, 29)</td>\n",
+       "      <td>45.101101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>/projects/chuang-lab/jnh/flower/nextflow/rdffi...</td>\n",
+       "      <td>41586_2019_1429_MOESM2_ESM.mov.clip-0-3.mov</td>\n",
+       "      <td>rr</td>\n",
+       "      <td>hFwe2(RFP)</td>\n",
+       "      <td>0-24.024hr</td>\n",
+       "      <td>(1024, 1024, 29)</td>\n",
+       "      <td>45.101101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>/projects/chuang-lab/jnh/flower/nextflow/rdffi...</td>\n",
+       "      <td>41586_2019_1429_MOESM2_ESM.mov.clip-1-0.mov</td>\n",
+       "      <td>gg</td>\n",
+       "      <td>hFwe3(GFP)</td>\n",
+       "      <td>0-24.024hr</td>\n",
+       "      <td>(1024, 1024, 29)</td>\n",
+       "      <td>45.101101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>/projects/chuang-lab/jnh/flower/nextflow/rdffi...</td>\n",
+       "      <td>41586_2019_1429_MOESM2_ESM.mov.clip-1-1.mov</td>\n",
+       "      <td>gg</td>\n",
+       "      <td>hFwe4(GFP)</td>\n",
+       "      <td>0-24.024hr</td>\n",
+       "      <td>(1024, 1024, 29)</td>\n",
+       "      <td>47.151151</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>/projects/chuang-lab/jnh/flower/nextflow/rdffi...</td>\n",
+       "      <td>41586_2019_1429_MOESM2_ESM.mov.clip-1-2.mov</td>\n",
+       "      <td>rr</td>\n",
+       "      <td>hFwe3(RFP)</td>\n",
+       "      <td>0-24.024hr</td>\n",
+       "      <td>(1024, 1024, 29)</td>\n",
+       "      <td>45.101101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>/projects/chuang-lab/jnh/flower/nextflow/rdffi...</td>\n",
+       "      <td>41586_2019_1429_MOESM2_ESM.mov.clip-1-3.mov</td>\n",
+       "      <td>rr</td>\n",
+       "      <td>hFwe4(RFP)</td>\n",
+       "      <td>0-24.024hr</td>\n",
+       "      <td>(1024, 1024, 29)</td>\n",
+       "      <td>42.026026</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>/projects/chuang-lab/jnh/flower/nextflow/rdffi...</td>\n",
+       "      <td>41586_2019_1429_MOESM3_ESM.mov.clip-0-0.mov</td>\n",
+       "      <td>gg</td>\n",
+       "      <td>hFwe1(GFP)-hFwe1(RFP)</td>\n",
+       "      <td>0-23.707hr</td>\n",
+       "      <td>(1024, 1024, 378)</td>\n",
+       "      <td>41.001001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>/projects/chuang-lab/jnh/flower/nextflow/rdffi...</td>\n",
+       "      <td>41586_2019_1429_MOESM3_ESM.mov.clip-0-0.mov</td>\n",
+       "      <td>gr</td>\n",
+       "      <td>hFwe1(GFP)-hFwe1(RFP)</td>\n",
+       "      <td>0-23.707hr</td>\n",
+       "      <td>(1024, 1024, 378)</td>\n",
+       "      <td>27.675676</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>/projects/chuang-lab/jnh/flower/nextflow/rdffi...</td>\n",
+       "      <td>41586_2019_1429_MOESM3_ESM.mov.clip-0-0.mov</td>\n",
+       "      <td>rg</td>\n",
+       "      <td>hFwe1(GFP)-hFwe1(RFP)</td>\n",
+       "      <td>0-23.707hr</td>\n",
+       "      <td>(1024, 1024, 378)</td>\n",
+       "      <td>27.675676</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>/projects/chuang-lab/jnh/flower/nextflow/rdffi...</td>\n",
+       "      <td>41586_2019_1429_MOESM3_ESM.mov.clip-0-0.mov</td>\n",
+       "      <td>rr</td>\n",
+       "      <td>hFwe1(GFP)-hFwe1(RFP)</td>\n",
+       "      <td>0-23.707hr</td>\n",
+       "      <td>(1024, 1024, 378)</td>\n",
+       "      <td>50.226226</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>/projects/chuang-lab/jnh/flower/nextflow/rdffi...</td>\n",
+       "      <td>41586_2019_1429_MOESM4_ESM.mov.clip-0-0.mov</td>\n",
+       "      <td>gg</td>\n",
+       "      <td>hFwe1(GFP)-hFwe2(RFP)</td>\n",
+       "      <td>0-23.707hr</td>\n",
+       "      <td>(1024, 1024, 271)</td>\n",
+       "      <td>37.925926</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>/projects/chuang-lab/jnh/flower/nextflow/rdffi...</td>\n",
+       "      <td>41586_2019_1429_MOESM4_ESM.mov.clip-0-0.mov</td>\n",
+       "      <td>gr</td>\n",
+       "      <td>hFwe1(GFP)-hFwe2(RFP)</td>\n",
+       "      <td>0-23.707hr</td>\n",
+       "      <td>(1024, 1024, 271)</td>\n",
+       "      <td>24.600601</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>/projects/chuang-lab/jnh/flower/nextflow/rdffi...</td>\n",
+       "      <td>41586_2019_1429_MOESM4_ESM.mov.clip-0-0.mov</td>\n",
+       "      <td>rg</td>\n",
+       "      <td>hFwe1(GFP)-hFwe2(RFP)</td>\n",
+       "      <td>0-23.707hr</td>\n",
+       "      <td>(1024, 1024, 271)</td>\n",
+       "      <td>24.600601</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>/projects/chuang-lab/jnh/flower/nextflow/rdffi...</td>\n",
+       "      <td>41586_2019_1429_MOESM4_ESM.mov.clip-0-0.mov</td>\n",
+       "      <td>rr</td>\n",
+       "      <td>hFwe1(GFP)-hFwe2(RFP)</td>\n",
+       "      <td>0-23.707hr</td>\n",
+       "      <td>(1024, 1024, 271)</td>\n",
+       "      <td>42.026026</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>/projects/chuang-lab/jnh/flower/nextflow/rdffi...</td>\n",
+       "      <td>41586_2019_1429_MOESM5_ESM.mov.clip-0-0.mov</td>\n",
+       "      <td>gg</td>\n",
+       "      <td>hFwe1(GFP)-hFwe2(RFP)</td>\n",
+       "      <td>:10-26:18hr</td>\n",
+       "      <td>(1024, 1024, 262)</td>\n",
+       "      <td>45.101101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>/projects/chuang-lab/jnh/flower/nextflow/rdffi...</td>\n",
+       "      <td>41586_2019_1429_MOESM5_ESM.mov.clip-0-0.mov</td>\n",
+       "      <td>gr</td>\n",
+       "      <td>hFwe1(GFP)-hFwe2(RFP)</td>\n",
+       "      <td>:10-26:18hr</td>\n",
+       "      <td>(1024, 1024, 262)</td>\n",
+       "      <td>24.600601</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>/projects/chuang-lab/jnh/flower/nextflow/rdffi...</td>\n",
+       "      <td>41586_2019_1429_MOESM5_ESM.mov.clip-0-0.mov</td>\n",
+       "      <td>rg</td>\n",
+       "      <td>hFwe1(GFP)-hFwe2(RFP)</td>\n",
+       "      <td>:10-26:18hr</td>\n",
+       "      <td>(1024, 1024, 262)</td>\n",
+       "      <td>24.600601</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>/projects/chuang-lab/jnh/flower/nextflow/rdffi...</td>\n",
+       "      <td>41586_2019_1429_MOESM5_ESM.mov.clip-0-0.mov</td>\n",
+       "      <td>rr</td>\n",
+       "      <td>hFwe1(GFP)-hFwe2(RFP)</td>\n",
+       "      <td>:10-26:18hr</td>\n",
+       "      <td>(1024, 1024, 262)</td>\n",
+       "      <td>47.151151</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>/projects/chuang-lab/jnh/flower/nextflow/rdffi...</td>\n",
+       "      <td>41586_2019_1429_MOESM8_ESM.mov.clip-0-0.mov</td>\n",
+       "      <td>gg</td>\n",
+       "      <td>Z-VAD-FMK:hFwe1(GFP)-hFwe2(RFP)</td>\n",
+       "      <td>0-24.09hr</td>\n",
+       "      <td>(1024, 1024, 34)</td>\n",
+       "      <td>49.201201</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>/projects/chuang-lab/jnh/flower/nextflow/rdffi...</td>\n",
+       "      <td>41586_2019_1429_MOESM8_ESM.mov.clip-0-0.mov</td>\n",
+       "      <td>gr</td>\n",
+       "      <td>Z-VAD-FMK:hFwe1(GFP)-hFwe2(RFP)</td>\n",
+       "      <td>0-24.09hr</td>\n",
+       "      <td>(1024, 1024, 34)</td>\n",
+       "      <td>29.725726</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>/projects/chuang-lab/jnh/flower/nextflow/rdffi...</td>\n",
+       "      <td>41586_2019_1429_MOESM8_ESM.mov.clip-0-0.mov</td>\n",
+       "      <td>rg</td>\n",
+       "      <td>Z-VAD-FMK:hFwe1(GFP)-hFwe2(RFP)</td>\n",
+       "      <td>0-24.09hr</td>\n",
+       "      <td>(1024, 1024, 34)</td>\n",
+       "      <td>29.725726</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>/projects/chuang-lab/jnh/flower/nextflow/rdffi...</td>\n",
+       "      <td>41586_2019_1429_MOESM8_ESM.mov.clip-0-0.mov</td>\n",
+       "      <td>rr</td>\n",
+       "      <td>Z-VAD-FMK:hFwe1(GFP)-hFwe2(RFP)</td>\n",
+       "      <td>0-24.09hr</td>\n",
+       "      <td>(1024, 1024, 34)</td>\n",
+       "      <td>41.001001</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                              rdffile  \\\n",
+       "15  /projects/chuang-lab/jnh/flower/nextflow/rdffi...   \n",
+       "19  /projects/chuang-lab/jnh/flower/nextflow/rdffi...   \n",
+       "20  /projects/chuang-lab/jnh/flower/nextflow/rdffi...   \n",
+       "9   /projects/chuang-lab/jnh/flower/nextflow/rdffi...   \n",
+       "12  /projects/chuang-lab/jnh/flower/nextflow/rdffi...   \n",
+       "13  /projects/chuang-lab/jnh/flower/nextflow/rdffi...   \n",
+       "4   /projects/chuang-lab/jnh/flower/nextflow/rdffi...   \n",
+       "8   /projects/chuang-lab/jnh/flower/nextflow/rdffi...   \n",
+       "10  /projects/chuang-lab/jnh/flower/nextflow/rdffi...   \n",
+       "2   /projects/chuang-lab/jnh/flower/nextflow/rdffi...   \n",
+       "17  /projects/chuang-lab/jnh/flower/nextflow/rdffi...   \n",
+       "16  /projects/chuang-lab/jnh/flower/nextflow/rdffi...   \n",
+       "7   /projects/chuang-lab/jnh/flower/nextflow/rdffi...   \n",
+       "1   /projects/chuang-lab/jnh/flower/nextflow/rdffi...   \n",
+       "11  /projects/chuang-lab/jnh/flower/nextflow/rdffi...   \n",
+       "21  /projects/chuang-lab/jnh/flower/nextflow/rdffi...   \n",
+       "0   /projects/chuang-lab/jnh/flower/nextflow/rdffi...   \n",
+       "3   /projects/chuang-lab/jnh/flower/nextflow/rdffi...   \n",
+       "5   /projects/chuang-lab/jnh/flower/nextflow/rdffi...   \n",
+       "23  /projects/chuang-lab/jnh/flower/nextflow/rdffi...   \n",
+       "6   /projects/chuang-lab/jnh/flower/nextflow/rdffi...   \n",
+       "22  /projects/chuang-lab/jnh/flower/nextflow/rdffi...   \n",
+       "18  /projects/chuang-lab/jnh/flower/nextflow/rdffi...   \n",
+       "14  /projects/chuang-lab/jnh/flower/nextflow/rdffi...   \n",
+       "\n",
+       "                                        movfile color-pair  \\\n",
+       "15  41586_2019_1429_MOESM2_ESM.mov.clip-0-0.mov         gg   \n",
+       "19  41586_2019_1429_MOESM2_ESM.mov.clip-0-1.mov         gg   \n",
+       "20  41586_2019_1429_MOESM2_ESM.mov.clip-0-2.mov         rr   \n",
+       "9   41586_2019_1429_MOESM2_ESM.mov.clip-0-3.mov         rr   \n",
+       "12  41586_2019_1429_MOESM2_ESM.mov.clip-1-0.mov         gg   \n",
+       "13  41586_2019_1429_MOESM2_ESM.mov.clip-1-1.mov         gg   \n",
+       "4   41586_2019_1429_MOESM2_ESM.mov.clip-1-2.mov         rr   \n",
+       "8   41586_2019_1429_MOESM2_ESM.mov.clip-1-3.mov         rr   \n",
+       "10  41586_2019_1429_MOESM3_ESM.mov.clip-0-0.mov         gg   \n",
+       "2   41586_2019_1429_MOESM3_ESM.mov.clip-0-0.mov         gr   \n",
+       "17  41586_2019_1429_MOESM3_ESM.mov.clip-0-0.mov         rg   \n",
+       "16  41586_2019_1429_MOESM3_ESM.mov.clip-0-0.mov         rr   \n",
+       "7   41586_2019_1429_MOESM4_ESM.mov.clip-0-0.mov         gg   \n",
+       "1   41586_2019_1429_MOESM4_ESM.mov.clip-0-0.mov         gr   \n",
+       "11  41586_2019_1429_MOESM4_ESM.mov.clip-0-0.mov         rg   \n",
+       "21  41586_2019_1429_MOESM4_ESM.mov.clip-0-0.mov         rr   \n",
+       "0   41586_2019_1429_MOESM5_ESM.mov.clip-0-0.mov         gg   \n",
+       "3   41586_2019_1429_MOESM5_ESM.mov.clip-0-0.mov         gr   \n",
+       "5   41586_2019_1429_MOESM5_ESM.mov.clip-0-0.mov         rg   \n",
+       "23  41586_2019_1429_MOESM5_ESM.mov.clip-0-0.mov         rr   \n",
+       "6   41586_2019_1429_MOESM8_ESM.mov.clip-0-0.mov         gg   \n",
+       "22  41586_2019_1429_MOESM8_ESM.mov.clip-0-0.mov         gr   \n",
+       "18  41586_2019_1429_MOESM8_ESM.mov.clip-0-0.mov         rg   \n",
+       "14  41586_2019_1429_MOESM8_ESM.mov.clip-0-0.mov         rr   \n",
+       "\n",
+       "                          celltypes         time         array_size  \\\n",
+       "15                       hFwe1(GFP)   0-24.024hr   (1024, 1024, 29)   \n",
+       "19                       hFwe2(GFP)   0-24.024hr   (1024, 1024, 29)   \n",
+       "20                       hFwe1(RFP)   0-24.024hr   (1024, 1024, 29)   \n",
+       "9                        hFwe2(RFP)   0-24.024hr   (1024, 1024, 29)   \n",
+       "12                       hFwe3(GFP)   0-24.024hr   (1024, 1024, 29)   \n",
+       "13                       hFwe4(GFP)   0-24.024hr   (1024, 1024, 29)   \n",
+       "4                        hFwe3(RFP)   0-24.024hr   (1024, 1024, 29)   \n",
+       "8                        hFwe4(RFP)   0-24.024hr   (1024, 1024, 29)   \n",
+       "10            hFwe1(GFP)-hFwe1(RFP)   0-23.707hr  (1024, 1024, 378)   \n",
+       "2             hFwe1(GFP)-hFwe1(RFP)   0-23.707hr  (1024, 1024, 378)   \n",
+       "17            hFwe1(GFP)-hFwe1(RFP)   0-23.707hr  (1024, 1024, 378)   \n",
+       "16            hFwe1(GFP)-hFwe1(RFP)   0-23.707hr  (1024, 1024, 378)   \n",
+       "7             hFwe1(GFP)-hFwe2(RFP)   0-23.707hr  (1024, 1024, 271)   \n",
+       "1             hFwe1(GFP)-hFwe2(RFP)   0-23.707hr  (1024, 1024, 271)   \n",
+       "11            hFwe1(GFP)-hFwe2(RFP)   0-23.707hr  (1024, 1024, 271)   \n",
+       "21            hFwe1(GFP)-hFwe2(RFP)   0-23.707hr  (1024, 1024, 271)   \n",
+       "0             hFwe1(GFP)-hFwe2(RFP)  :10-26:18hr  (1024, 1024, 262)   \n",
+       "3             hFwe1(GFP)-hFwe2(RFP)  :10-26:18hr  (1024, 1024, 262)   \n",
+       "5             hFwe1(GFP)-hFwe2(RFP)  :10-26:18hr  (1024, 1024, 262)   \n",
+       "23            hFwe1(GFP)-hFwe2(RFP)  :10-26:18hr  (1024, 1024, 262)   \n",
+       "6   Z-VAD-FMK:hFwe1(GFP)-hFwe2(RFP)    0-24.09hr   (1024, 1024, 34)   \n",
+       "22  Z-VAD-FMK:hFwe1(GFP)-hFwe2(RFP)    0-24.09hr   (1024, 1024, 34)   \n",
+       "18  Z-VAD-FMK:hFwe1(GFP)-hFwe2(RFP)    0-24.09hr   (1024, 1024, 34)   \n",
+       "14  Z-VAD-FMK:hFwe1(GFP)-hFwe2(RFP)    0-24.09hr   (1024, 1024, 34)   \n",
+       "\n",
+       "    maxrdf_loc  \n",
+       "15   45.101101  \n",
+       "19   48.176176  \n",
+       "20   45.101101  \n",
+       "9    45.101101  \n",
+       "12   45.101101  \n",
+       "13   47.151151  \n",
+       "4    45.101101  \n",
+       "8    42.026026  \n",
+       "10   41.001001  \n",
+       "2    27.675676  \n",
+       "17   27.675676  \n",
+       "16   50.226226  \n",
+       "7    37.925926  \n",
+       "1    24.600601  \n",
+       "11   24.600601  \n",
+       "21   42.026026  \n",
+       "0    45.101101  \n",
+       "3    24.600601  \n",
+       "5    24.600601  \n",
+       "23   47.151151  \n",
+       "6    49.201201  \n",
+       "22   29.725726  \n",
+       "18   29.725726  \n",
+       "14   41.001001  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rdffiles.sort_values(['movfile', 'color-pair'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rdffiles.sort_values(['movfile', 'color-pair']).to_excel('rdf_max_values.xls')"
    ]
   },
   {
